# Sanguosha

./: .gitignore  CMakeLists.txt  README.md
include/: card.h  general.h
proto/: CMakeLists.txt  generals.json  generals.pb.cc  generals.pb.h  generals.proto  skills.proto
protobuf/: generals.proto
shell/: compile_proto.sh
src/: CMakeLists.txt
src/card/: CMakeLists.txt  card.cpp
src/generals/: CMakeLists.txt  generals.cpp
src/main/: CMakeLists.txt  main.cpp  test_proto.cpp
